--- a/src/main/resources/templates/QuoteList.html
+++ b/src/main/resources/templates/QuoteList.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
 
-    <link rel="stylesheet" th:href="@{/quoteList.css}"/>
+    <link rel="stylesheet" th:href="@{/general.css}"/>
 
    
 
@@ -17,12 +17,14 @@
     <title>Motivation of the Day</title>
     </head>
     <body>
+      <div class="body">
     <h1> Welcome: </h1> <h1 th:text="${journal.user}"></h1>
 
-      <a href="/login" class="btn btn-info btn-lg">Log out
+      <a href="/" class="btn btn-outline-light btn-lg px-5">Log out
       </a>
     </p> 
     <h2>Motivation Quotes </h2>
+  </div>
 </form>
 <th:block th:each="quote: ${quoteList}">
     <form 
@@ -32,20 +34,15 @@
     <input type="hidden" th:name="message" th:value="${quote.message}"/>
     <input type="hidden" th:name="author" th:value="${quote.author}"/>
     <div id="ct">
-      <div class="corner "id="left_top"></div>
-      <div class="corner" id="left_bottom"></div>
-      <div class="corner" id="right_top"></div>
-      <div class="corner" id="right_bottom"></div>
       
-      <span th:text = "${quote.author}"></span>
+      <span class= "author" th:text = "${quote.author}"></span>
 
       <blockquote>
-        <p>&ldquo;<i th:text = "${quote.message}"></i>&rdquo;❤</p>
+        <p>&ldquo;<i th:text = "${quote.message}"></i>&rdquo;</p>
       </blockquote>
-      <br>
-      <button class="submit-button" type="submit">Entry</button>
+      <button class="btn btn-outline-dark btn-lg px-1" type="submit">Entry</button>
     </div>
-
+    
   </div>
     </form>
 </th:block>
