--- a/src/main/resources/templates/save.html
+++ b/src/main/resources/templates/save.html
@@ -7,54 +7,87 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
 
-    <link rel="stylesheet" th:href="@{/entry.css}"/>
+    <link rel="stylesheet" th:href="@{/general.css}"/>
     <title>Entry Saved</title>
 </head>
-<h1> Welcome: </h1> <h1 th:text="${form.user}"></h1>
-<p><a href="/login" class="btn btn-info btn-lg">Log out
+<div class="body">
+
+<p><a href="/" class="btn btn-outline-light btn-lg px-5">Log out
 </a></p>
      
-
 <h2><span>Saved Entry </span></h2>
+</div>
+<div class="container text-center pt-5 mt-5">
 <body th:object = "${form}">
+
     <h1>Your Entry Information</h1>
 
+</div>
+<div class="container text-center pt-5 mt-5">
+<table class="table table-dark">
+    <tbody>
+    <div th:object ="${form}"> 
+      
+          <tr>
+            <th scope="row">Thoughts </th>
+            <td th:text = "*{thoughts}"></td>
+          </tr>
+          <tr>
+            <th scope="row">Feelings </th>
+            <td th:text = "*{feelings}"></td>
+        </tr>
+        <tr>
+            <th scope="row">Quote </th>
+            <td th:text = "*{message}"></td>
+        </tr>
+        <tr>
+            <th scope="row">Author </th>
+            <td th:text = "*{author}"></td>
+        </tr>
 
-    <p>
-        Date:
-    </p>
-    <p
-        th:text = "*{date}">
-    </p>
+        </tbody>
+      </table>
+    </div>
+      <!--
+<div class="container">
+    <div class="row">
+      <div class="col">
+            Thoughts:
+            
+      </div>
+      <div class="col">
+            Feelings:
 
-    <p>
-        Thoughts:
-    </p>
-    <p
-        th:text = "*{thoughts}">
-    </p>
-    <p>
-        Feelings:
-    </p>
-    <p
-        th:text = "*{feelings}">
-    </p>
+      </div>
+      <div class="col">
+            Quote:
+      </div>
+      <div class="col">
+            Author:
+        <div class="row" th:object = "${form}">
+            <div class="col">
+              <p
+                  th:text = "*{thoughts}">
+              </p>
+            </div>
+            <div class="col">
+              <p
+                  th:text = "*{feelings}">
+              </p>
+            </div>
+            <div class="col">
+              <p
+                  th:text = "*{message}">
+              </p>
+            </div>
+            <div class="col">
+              <p
+                  th:text = "*{author}">
+              </p>
+      </div>
+    </div>-->
+  </div>
 
-    <p>
-        Quote:
-    </p>
-    <p
-        th:text = "*{message}">
-    </p>
-    <p>
-        Author:
-    </p>
-    <p
-        th:text = "*{author}">
-    </p>
-    
-
-    
     
 
 </body>
